# flagged

./: .gitignore  README.md  pyproject.toml
src/flagged/: .ctf.toml  cli.py  display.py  vault.py  writeup.py
test-vault/test-vault/2026/meow/: meow.md  test.md
test-vault/test-vault/2026/test/: test.md
